force-app/main/default/objects/OM_VID_TAM__c/OM_VID_TAM__c.object-meta.xml
<CustomObject>
    <description>Total Addressable Market</description>
    <label>TAM</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>TAM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>