force-app/main/default/objects/OM_VID_TAM__c/fields/Colour_Code__c.field-meta.xml
<CustomField>
    <fullName>Colour_Code__c</fullName>
    <label>Colour Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>