force-app/main/default/objects/OM_VID_TAM__c/fields/OM_ModelRef__c.field-meta.xml
<CustomField>
    <fullName>OM_ModelRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>TAM</relationshipLabel>
    <relationshipName>TAM</relationshipName>
    <type>Lookup</type>
</CustomField>