force-app/main/default/objects/OM_VID_TAM__c/fields/OM_ProductCodeText__c.field-meta.xml
<CustomField>
    <fullName>OM_ProductCodeText__c</fullName>
    <label>Product Code Text</label>
    <length>15</length>
    <type>Text</type>
</CustomField>