force-app/main/default/objects/OM_VID_TAM__c/fields/OM_VID_EuroTonne__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_EuroTonne__c</fullName>
    <formula>Revenue_Per_Tonne__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Euro/Ton DAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>