force-app/main/default/objects/OM_VID_TAM__c/fields/OM_VID_EuroTonnePrevious__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_EuroTonnePrevious__c</fullName>
    <label>Euro/Ton DAP Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>