force-app/main/default/objects/OM_VID_TAM__c/fields/OM_VID_Volume__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Volume__c</fullName>
    <formula>Volume_000_s__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>