force-app/main/default/objects/OM_VID_TAM__c/fields/OM_VID_VolumePrev__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_VolumePrev__c</fullName>
    <formula>Volume000sPrev__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>