force-app/main/default/objects/OM_VID_TAM__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <label>Precio</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>