force-app/main/default/objects/OM_VID_TAM__c/fields/Precio_FF__c.field-meta.xml
<CustomField>
    <fullName>Precio_FF__c</fullName>
    <label>Euro/Ton FF</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>