force-app/main/default/objects/OM_VID_TAM__c/fields/PrecioFFPrev__c.field-meta.xml
<CustomField>
    <fullName>PrecioFFPrev__c</fullName>
    <label>Euro/Ton FF Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>