force-app/main/default/objects/OM_VID_TAM__c/fields/PrecioFFVar__c.field-meta.xml
<CustomField>
    <fullName>PrecioFFVar__c</fullName>
    <label>Euro/Ton FF Variation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>