force-app/main/default/objects/OM_VID_TAM__c/fields/RevenuePrev__c.field-meta.xml
<CustomField>
    <fullName>RevenuePrev__c</fullName>
    <label>Revenue Previous</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>