force-app/main/default/objects/OM_VID_TAM__c/fields/RevenueVar__c.field-meta.xml
<CustomField>
    <fullName>RevenueVar__c</fullName>
    <label>Revenue Variation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>