force-app/main/default/objects/OM_VID_TAM__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <length>10</length>
    <type>Text</type>
</CustomField>