force-app/main/default/objects/OM_VID_TAM__c/fields/Tonnes__c.field-meta.xml
<CustomField>
    <fullName>Tonnes__c</fullName>
    <label>Tonnes</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>