force-app/main/default/objects/OM_VID_TAM__c/fields/TonnesPrev__c.field-meta.xml
<CustomField>
    <fullName>TonnesPrev__c</fullName>
    <label>Tonnes Previous</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>