force-app/main/default/objects/OM_VID_TAM__c/fields/TonnesVarPercent__c.field-meta.xml
<CustomField>
    <fullName>TonnesVarPercent__c</fullName>
    <label>Tonnes Variation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>