force-app/main/default/objects/OM_VID_TAM__c/fields/Volume000sVar__c.field-meta.xml
<CustomField>
    <fullName>Volume000sVar__c</fullName>
    <label>Volume (000&apos;s) Variation</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>