force-app/main/default/objects/OM_VID_TAM__c/fields/Volume000sVarPercent__c.field-meta.xml
<CustomField>
    <fullName>Volume000sVarPercent__c</fullName>
    <label>Volume Variation Percentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>