force-app/main/default/objects/OM_VID_TAM__c/fields/Volume_000_s__c.field-meta.xml
<CustomField>
    <fullName>Volume_000_s__c</fullName>
    <description>Number of bottles in thousands</description>
    <label>Volume (000&apos;s)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>